
	* lisp/sawfish/wm/ext/edge-flip.jl: open sawfish.wm.util.flippers
	                                    remove the eval-when-compile call
					    removed three unneeded exports
					    remove restart-flippers

	* lisp/sawfish/wm/ext/infinite-desktop.jl
	* lisp/sawfish/wm/edge/infinite-desktop.jl: moved file

	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/edge/flip.jl: moved file

	* lisp/sawfish/wm/edge/util.jl: added, contains flippers-activate (=> user-modules
	should use THIS, not recreate-flippers (as it handles the hooks))

	* OPTIONS
	* src/fake-libexec
	* lisp/Makefile.in
	* src/Makefile.in: updated

	* lisp/sawfish/wm/edge/infinite-desktop.jl: renamed infinite-desktop.move-distance to
	infinite-desktop-move-distance and renamed infinite-desktop.move-cursor-distance to
	infinite-desktop-move-cursor-distance (note `.' VS `-')
	                                            improved infinite-desktop-enable

	* README.IMPORTANT: updated

	* configure.in: display a red warning

2010-10-23  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/util.jl: set-tab-adjustment function for tabbed-themes

	* lisp/sawfish/wm/gaol.jl: added tabs/util to gaolled modules

	* configure.in: bumped to 2.90.0

	* lisp/sawfish/wm/windows.jl: remove desktop-check from rename-window-func

2010-10-21  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: fixed a typo
	                 updated

	* lisp/sawfish/wm/windows.jl: behavior change in `rename-window'.
	Check NEWS for more infos.

2010-10-19  Teika kazura <teika@lavabit.com>
	* man/news.texi: Added a template.

	* CONTRIBUTING
	* Makefile.in
	* man/news.texi
	* po/README
	* po/make-pot: Doc. Added Kim B Heino to the "Thanks" list.
	News. More translation docs.

2010-10-16  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: window-ops-menu does now handle
	window-matchers and makes entries insensitive accordingly.
	Also move the send-window-to and copy-window-to entries into